--- a/FlaskApp/templates/bookList.html
+++ b/FlaskApp/templates/bookList.html
@@ -6,7 +6,7 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<div class="v6_2">
+		<div class="book_list_page">
 
 			<div class="book_list_back_row">
 				<button class="book_list_back_bubble">
