--- a/FlaskApp/templates/homepageSignedIn.html
+++ b/FlaskApp/templates/homepageSignedIn.html
@@ -13,11 +13,22 @@
 					<a href = "/showBookList">Buy/Rent</a>
 				</span>
 			</div>
+			<div class="homepage_contact_list_bubble">
+				<span class="homepage_bubble_text">
+					<a href = "/contactSellers">Contact List</a>
+				</span>
+			</div>
+			<div class="homepage_best_sellers_bubble">
+				<span class="homepage_bubble_text">
+					<a href = "/bestSellers">Best Sellers</a>
+				</span>
+			</div>
 			<div class="homepage_sell_bubble">
 				<span class="homepage_bubble_text">
 					<a href = "/sell">Sell</a>
 				</span>
 			</div>
+
 		</div>
 	</body>
 </html>
