--- a/FlaskApp/static/homepageSignedIn.css
+++ b/FlaskApp/static/homepageSignedIn.css
@@ -11,7 +11,37 @@
   opacity: 1;
   position: absolute;
   top: 500px;
-  left: 70px;
+  left: 100px;
+  border-top-left-radius: 59px;
+  border-top-right-radius: 59px;
+  border-bottom-left-radius: 59px;
+  border-bottom-right-radius: 59px;
+  overflow: hidden;
+}
+.homepage_contact_list_bubble {
+  width: 219px;
+  height: 76px;
+  text-align:center;
+  background: rgba(64,154,116,1);
+  opacity: 1;
+  position: absolute;
+  top: 500px;
+  left: 450px;
+  border-top-left-radius: 59px;
+  border-top-right-radius: 59px;
+  border-bottom-left-radius: 59px;
+  border-bottom-right-radius: 59px;
+  overflow: hidden;
+}
+.homepage_best_sellers_bubble {
+  width: 219px;
+  height: 76px;
+  text-align:center;
+  background: rgba(64,154,116,1);
+  opacity: 1;
+  position: absolute;
+  top: 500px;
+  left: 800px;
   border-top-left-radius: 59px;
   border-top-right-radius: 59px;
   border-bottom-left-radius: 59px;
@@ -26,7 +56,7 @@
   opacity: 1;
   position: absolute;
   top: 500px;
-  left: 1127px;
+  left: 1150px;
   border-top-left-radius: 59px;
   border-top-right-radius: 59px;
   border-bottom-left-radius: 59px;
